# GuitarTuner

./: .gitignore  README.md  com.github.CkTD.guitartuner.json  gt.c  meson.build
data/: com.github.CkTD.guitartuner.appdata.xml.in  com.github.CkTD.guitartuner.desktop.in  com.github.CkTD.guitartuner.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: guitartuner-app.c  guitartuner-app.h  guitartuner-freq.c  guitartuner-freq.h  guitartuner-note.c  guitartuner-note.h  guitartuner-prefs.c  guitartuner-prefs.h  guitartuner-prefs.ui  guitartuner-stack.ui  guitartuner-window.c  guitartuner-window.h  guitartuner-window.ui  guitartuner.gresource.xml  main.c  meson.build  style.css
